--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="about">
-        <img id="home-image" src="assets/images/home.png"></img>
+        <img id="home-image" src=""></img>
         <div>
             <h1 id="name"></h1>
             <p id="description"></p>
