--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="assets/index.css">
     <title id="title-name">About Me | </title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
 </head>
 
 <body>
@@ -17,10 +18,8 @@
             <p id="description"></p>
             <div class="buttons">
                 <a class="button" id="button1" href=""></a>
-                <a class="button" id="button2" href="" target="_blank"
-                    rel="noopener noreferrer"></a>
-                <a class="button" id="button3" href="" target="_blank"
-                    rel="noopener noreferrer"></a>
+                <a class="button" id="button2" href="" target="_blank" rel="noopener noreferrer"></a>
+                <a class="button" id="button3" href="" target="_blank" rel="noopener noreferrer"></a>
             </div>
         </div>
     </div>
