--- a/project/index.html
+++ b/project/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../assets/index.css">
     <link rel="stylesheet" href="../assets/project.css">
+    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.png">
 </head>
+
 <body>
     <div class="wrapper">
         <div id="photos-section">
@@ -27,4 +30,5 @@
 
     <script src="../../assets/project.js"></script>
 </body>
+
 </html>
